--- a/Artikelverwaltung/src/main/webapp/login.xhtml
+++ b/Artikelverwaltung/src/main/webapp/login.xhtml
@@ -5,18 +5,11 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
-    <title>Zander Filz Shop: Login</title>
+    <title>Zero: Login</title>
+    <meta http-equiv="refresh" content="0;url=index.xhtml"/>
 </h:head>
 <h:body>
-    <p><img id="kopf_links" src="logo.jpg" width="250" alt="Logo"/></p>
-    <p id="kopf_rechts">
-        <h:outputText value="#{anschrift.name}"/>
-        <br/>
-        <h:outputText value="#{anschrift.strasse} #{anschrift.hausnummer}"/>
-        <br/>
-        <h:outputText value="#{anschrift.plz} #{anschrift.ort}"/>
-    </p>
-    <h1>Zander Filz Shop: Login</h1>
+    <h1>Zero: Login</h1>
     <h:form>
 
         <p>
