--- a/Artikelverwaltung/src/main/webapp/index.xhtml
+++ b/Artikelverwaltung/src/main/webapp/index.xhtml
@@ -25,6 +25,10 @@
         </p:dataTable>
     </h:form>
 
+    <h:outputText value="Contributors may edit data here:"/>
+    <h:form>
+        <h:commandButton value="Go to Authentication" action="authentication.xhtml?faces-redirect=true"/>
+    </h:form>
 
     <p id="fussnote">Work in Progress: <br/> This is a protoype!</p>
 </h:body>
