--- a/Artikelverwaltung/src/main/webapp/backoffice.xhtml
+++ b/Artikelverwaltung/src/main/webapp/backoffice.xhtml
@@ -6,7 +6,7 @@
 <h:head>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
   <title>Artikelverwaltung</title>
-  <h:outputText value="#{loginController.checkLogin()}"/>
+  <h:outputText value="#{authenticationController.checkLogin()}"/>
 </h:head>
 <h:body>
   <p><a href="."><img id="kopf_links" src="logo.jpg" width="250" alt="Logo"/></a></p>
@@ -71,7 +71,7 @@
 
     </h:panelGrid>
     <h:commandButton action="#{artikelController.removeArtikel}" value="Löschen"/>
-    <h:commandLink action="#{loginController.logout}" value="Logout"/>
+    <h:commandLink action="#{authenticationController.logout}" value="Logout"/>
 
     <h:dataTable value="#{artikelController.artikel.bewertungen}" var="bewertung">
       <h:column><f:facet name="value">Wert</f:facet><h:outputText value="#{bewertung.wert}"/></h:column>
